--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,96 +1,118 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Recode</title>
-    <script src="https://unpkg.com/htmx.org@1.9.8" integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr" crossorigin="anonymous"></script>
-    <style>
+    <head>
+        <meta charset="utf-8" />
+        <title>Recode</title>
+        <script type="importmap">
+            {
+                "imports": {
+                    "vue": "https://unpkg.com/vue@3.4.21/dist/vue.esm-browser.js"
+                }
+            }
+        </script>
+        <script type="module" src="/js/app.js"></script>
+        <style>
         * {
-            box-sizing: border-box;
+        box-sizing: border-box;
         }
 
         #forms {
-            display: flex;
-            flex-flow: column;
-            width: min(400px, 75%);
-            gap: 30px;
+        display: flex;
+        flex-flow: column;
+        width: min(400px, 75%);
+        gap: 30px;
         }
 
         section {
-            width: 75%;
-            display: flex;
-            margin: 10px;
-            position: relative;
+        width: 75%;
+        display: flex;
+        margin: 10px;
+        position: relative;
         }
 
         fieldset {
-            width: 100%;
+        width: 100%;
         }
 
         select {
-            width: 100%;
+        width: 100%;
         }
 
         form button  {
-            padding: 5px;
-            margin-top: 10px;
+        padding: 5px;
+        margin-top: 10px;
         }
-    </style>
+        </style>
+    </head>
 
-    <script type="text/javascript">
+    <template id="anime-list">
+        <select v-model="selected" name="newepisode" id="newepisodelist">
+            <option v-for="anime in list" :value="anime.path">{{anime.name}}</option>
+        </select>
+    </template>
 
-    </script>
-</head>
-
-<body>
-    <div class="forms">
-        <h1>Recode</h1>
+    <template id="new-episode">
         <section>
-            <form hx-trigger="load" hx-get="/anime" hx-target="select#newepisodelist">
+            <form>
                 <fieldset>
-                    <legend>New Episode</legend>
-                    <input id="rootdirectory" name="rootdirectory" type="text" placeholder="Root Directory"
-                        hx-trigger="load" hx-post="/rootdirectory" hx-swap="outerHTML" hx-target="this" />
-                    <select name="newepisode" id="newepisodelist" />
-                    <input type="file" name="video" />
-                    <input type="number" placeholder="Season" name="season" />
-                    <input type="number" placeholder="Episode" name="episode" />
+                    <legend>{{ title }}</legend>
+                    <input id="rootdirectory" name="rootdirectory" type="text" placeholder="Root Directory" :value="rootdir" />
+                    <anime-list @value-changed="handleSelectUpdate" :list></anime-list>
+                    <input @change="handleVideoFile" type="file" name="video" />
+                    <input v-model="newEpisode.season" type="number" placeholder="Season" name="season" />
+                    <input v-model="newEpisode.episode" type="number" placeholder="Episode" name="episode" />
                 </fieldset>
 
-                <button hx-trigger="click" hx-post="/newepisode" hx-encoding="multipart/form-data" hx-swap="none">Add New Episode</button>
+                <button @click.prevent="addNewEpisode">Add New Episode</button>
             </form>
         </section>
+    </template>
+    
+    <template id="recode-queue">
+        <div class="queue">
+            <h1>{{ title }}</h1>
+            <ul>
+                <li v-for="item in queue">{{ item.destination }}</li>
+            </ul>
+        </div>
+    </template>
 
+    <template id="next-episode">
         <section>
-            <form hx-trigger="load" hx-get="/anime" hx-target="select#nextepisodelist">
+            <form>
                 <fieldset>
-                    <legend>Next Episode</legend>
-                    <select name="nextepisode" id="nextepisodelist" />
-                    </select>
-                </fieldset>
-
-                <button>Add Next Episode</button>
-            </form>
-        </section>
-
-        <section>
-            <form hx-trigger="load" hx-get="/anime" hx-target="select#addshowlist">
-                <fieldset>
-                    <legend>Add Show</legend>
-                    <select name="addshow" id="addshowlist" />
-                    </select>
+                    <legend>{{ title }}</legend>
+                    <anime-list @value-changed="handleSelectUpdate" :list></anime-list>
                 </fieldset>
 
                 <button>Add Next Episode</button>
             </form>
         </section>
-    </div>
-    <div class="encoding">
+    </template>
 
-    </div>
-    <div class="queue" hx-trigger="load" hx-get="/queue" hx-target="ul">
-        <h1>Encoding Queue</h1>
-        <ul></ul>
-    </div>
-</body>
+    <template id="new-show">
+        <section>
+            <form>
+                <fieldset>
+                    <legend>{{ title }}</legend>
+                    <anime-list @value-changed="handleSelectUpdate" :list></anime-list>
+                </fieldset>
+
+                <button>Add Next Episode</button>
+            </form>
+        </section>
+    </template>
+
+    <body>
+        <div id="app" class="forms">
+            <h1>{{ title }}</h1>
+            <new-episode title="New Eps" :list :rootdir></new-episode>
+            <next-episode title="Next Episode" :list :rootdir></next-episode>
+            <new-show title="Add Show" :list :rootdir></new-show>
+            <recode-queue title="Encoding Queue"></recode-queue>
+        </div>
+        <div class="encoding">
+
+        </div>
+    </body>
 </html>
